# tcp_chat_app_example

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/client/: CMakeLists.txt  main.cpp
app/server/: CMakeLists.txt  main.cpp
include/client/: tcp_client.hpp
include/server/: tcp_connection.hpp  tcp_server.hpp
src/: CMakeLists.txt
src/client/: tcp_client.cpp
src/server/: tcp_connection.cpp  tcp_server.cpp
